--- a/decision-biases.yml
+++ b/decision-biases.yml
@@ -1,2 +1,2 @@
 decision-biases: 
-  message: Decision Making Belief And Behavioral Biases Service Result
+  message: Decision Making Belief And Behavioral Biases Service Results
